# my_c_sockets

./: CMakeLists.txt  run.sh
cert/: root.pem
include/: connection.h
src/: connection.c  main.c  main1.c
